# src/modules/user/user.router.ts
@@ -9,10 +9,11 @@ const controller = new UserController();
 router
   .route('/')
   .get(asyncWrapper(controller.findAll))
-  .post(authenticate, asyncWrapper(controller.create))
+  .post(asyncWrapper(controller.create))
   .patch(authenticate, asyncWrapper(controller.update))
   .delete(authenticate, asyncWrapper(controller.delete));
 
+router.route('/stats').get(authenticate, asyncWrapper(controller.stats));
 router.route('/:id').get(asyncWrapper(controller.findOne));
 
 export { router as user_router };
